@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Allow [ModuleBuildTiny::Fallback] as installer
 
 0.015     2015-08-28 18:21:03 EDT
   - Add script/ as another ExecDir for [ModuleBuildTiny] compatibility
